Document PPDG/src/objects/HPPStatusTotalDurations__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>AverageStatusDuration__c</fullName>
        <label>Average Status Duration (Days)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FromStatus__c</fullName>
        <label>From Status</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityCount__c</fullName>
        <label>Opportunity Count</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RunDate__c</fullName>
        <label>Run Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ToStatus__c</fullName>
        <label>To Status</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalStatusDuration__c</fullName>
        <label>Total Status Duration (Days)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>HPP Status Total Durations</label>
    <listViews>
        <fullName>All_HPP_Status_Total_Durations</fullName>
        <columns>NAME</columns>
        <columns>FromStatus__c</columns>
        <columns>ToStatus__c</columns>
        <columns>OpportunityCount__c</columns>
        <columns>TotalStatusDuration__c</columns>
        <columns>AverageStatusDuration__c</columns>
        <columns>RunDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All HPP Status Total Durations</label>
        <language>en_US</language>
    </listViews>
</CustomObject>